--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,54 @@
-# Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/startup_sherlock
+# =============================================================================
+# STARTUP SHERLOCK - ENVIRONMENT VARIABLES
+# =============================================================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env to git!
+# =============================================================================
 
-# Google Gemini API
-GEMINI_API_KEY=your_gemini_api_key_here
+# -----------------------------------------------------------------------------
+# DATABASE (Required)
+# -----------------------------------------------------------------------------
+# PostgreSQL connection string
+DATABASE_URL=postgresql://postgres:YOUR_PASSWORD@localhost:5432/startup_sherlock
 
-# Google Cloud Service Account
-GOOGLE_APPLICATION_CREDENTIALS=./gcloud-service-account-key.json
+# -----------------------------------------------------------------------------
+# GOOGLE CLOUD (Required)
+# -----------------------------------------------------------------------------
+GCS_PROJECT_ID=your-project-id
+GCS_BUCKET=your-bucket-name
 
-# Firebase Client Configuration (for frontend)
-VITE_FIREBASE_API_KEY=your_firebase_web_api_key
+# Google Cloud Service Account (Choose ONE):
+# GCS_SERVICE_ACCOUNT_BASE64=<base64_encoded_json>
+# GCS_SERVICE_ACCOUNT_JSON={"type":"service_account"...}
+# GOOGLE_APPLICATION_CREDENTIALS=./gcloud-service-account-key.json
+
+# -----------------------------------------------------------------------------
+# FIREBASE (Required)
+# -----------------------------------------------------------------------------
+# Firebase Service Account (Choose ONE):
+# FIREBASE_SERVICE_ACCOUNT_BASE64=<base64_encoded_json>
+# FIREBASE_SERVICE_ACCOUNT_JSON={"type":"service_account"...}
+# FIREBASE_SERVICE_ACCOUNT_KEY=./firebase-service-account-key.json
+
+# Firebase Client Config (Required)
+VITE_FIREBASE_API_KEY=your-api-key
 VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your-project-id
 VITE_FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-VITE_FIREBASE_APP_ID=your_firebase_app_id
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+VITE_FIREBASE_APP_ID=your-app-id
 
-# Optional: For development
+# -----------------------------------------------------------------------------
+# GEMINI API (Required)
+# -----------------------------------------------------------------------------
+GEMINI_API_KEY=your-gemini-api-key
+
+# -----------------------------------------------------------------------------
+# CORS (Optional - defaults to localhost)
+# -----------------------------------------------------------------------------
+ALLOWED_ORIGINS=https://your-frontend.web.app,http://localhost:5000
+
+# -----------------------------------------------------------------------------
+# NODE ENVIRONMENT (Optional)
+# -----------------------------------------------------------------------------
 NODE_ENV=development
-PORT=5000
